2005-11-22  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/Makefile.in :

	  - Now network.o is dependent on clist.h.

	* lib/network.c :
	* lib/network.h :

	  - Added a get_tuple() function so that a set of interval variables
	    can be grounded with intervals that satisfy the given constraints.

	* lib/clist.h :
	* lib/clist.c :

	  - Removed the offset parameter. clist doesn't care about literals. It
	    only cares about variables and the tuple in validate().

	* test/test.c :

	  - Renamed all test intervals so that they start with 0.

2005-11-21  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/mem.c :

	  - Debug version of tbe_mem_realloc() will no longer print FREE if the
	    original pointer is null.

2005-11-19  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/Makefile.in :
	* lib/clist.c :
	* lib/clist.h :

	  - Added clist for grounding of interval variables.

2005-11-13  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/network.c :

	  - get_intervals() will now only consider externally defined
	    intervals.

2005-11-07  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/network.c :
	* lib/network.h :

	  - Added get_intervals() which generates a list of intervals whose
	    relation with a given interval is a subset of a given relset, then
	    calls a given function for every matching interval.

	* test/test.c :

	  - Added a test for the new get_interval() function.

2005-09-07  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* VERSION :
	* configure.ac :

	  - Version 0.3.2

2005-09-05  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* test/test.c :

	  - Addded some tests to check correct operation of the new get_rel()
	    function.

	* lib/network.c :
	* lib/network.h :

	  - Added a new get_rel() function to return the relations between an
	    existing interval and a pair of endpoints.

	  - Renamed existing get_rel() function to get_rel1() to make way for
	    the new one.
